Loading comics for char and chars for comic Plus loading spinners

--- a/project/app/src/main/res/layout/content_main.xml
+++ b/project/app/src/main/res/layout/content_main.xml
@@ -12,6 +12,10 @@
     tools:context="com.udacity.capstone.modules.main.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
+    <include layout="@layout/fragment_loading" />
+
+
+
 </FrameLayout>
 
 </layout>
