--- a/project/app/src/main/res/layout/fragment_items.xml
+++ b/project/app/src/main/res/layout/fragment_items.xml
@@ -16,6 +16,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_gravity="center"
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
+
 
 </FrameLayout>
 </layout>
