--- a/project/app/src/main/res/layout/fragment_item_details.xml
+++ b/project/app/src/main/res/layout/fragment_item_details.xml
@@ -25,7 +25,8 @@
                     android:layout_height="400dp"
                     android:scaleType="centerCrop"
                     tools:background="@drawable/splash_image"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/content_description_item_image" />
 
                 <TextView
                     android:id="@+id/title"
@@ -48,19 +49,6 @@
                     android:layout_marginEnd="16dp"
                     android:layout_marginStart="16dp"
                     app:layout_constraintTop_toBottomOf="@id/title"/>
-
-                <android.support.design.widget.FloatingActionButton
-                    android:id="@+id/button"
-                    android:layout_width="56dp"
-                    android:layout_height="56dp"
-                    android:src="@android:drawable/ic_input_add"
-                    android:tint="@color/colorPrimaryDark"
-                    android:layout_gravity="top|end"
-                    android:layout_marginTop="360dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="16dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
 
 
             </android.support.constraint.ConstraintLayout>
