--- a/project/app/src/main/res/layout/fragment_items.xml
+++ b/project/app/src/main/res/layout/fragment_items.xml
@@ -9,7 +9,8 @@
         <ImageView
             android:id="@+id/background"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:contentDescription="@string/content_description_list_background_image" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
