--- a/project/app/src/main/res/layout/fragment_pager.xml
+++ b/project/app/src/main/res/layout/fragment_pager.xml
@@ -18,7 +18,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="top"
                 tools:background="@drawable/ironman"
-                 />
+                android:contentDescription="@string/content_description_onboarding_background_image" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -26,6 +26,8 @@
                 android:layout_gravity="bottom"
                 android:layout_marginBottom="80dp"
                 android:gravity="center"
+                android:paddingStart="48dp"
+                android:paddingEnd="48dp"
                 android:orientation="vertical"
                 >
 
@@ -43,9 +45,8 @@
                     android:textColor="@color/primary_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:lineSpacingExtra="6dp"
                     android:paddingTop="8dp"
-                    android:paddingStart="24dp"
-                    android:paddingEnd="24dp"
                     android:gravity="center"
                     tools:text="Add a long description here about your app's important feature."
                     />
