--- a/project/app/src/main/res/layout/item_layout.xml
+++ b/project/app/src/main/res/layout/item_layout.xml
@@ -26,7 +26,8 @@
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_width="match_parent"
-                   android:layout_height="match_parent" />
+                   android:layout_height="match_parent"
+                   android:contentDescription="@string/content_description_item_in_list_background_image" />
 
                <TextView
                    android:id="@+id/name"
@@ -52,11 +53,41 @@
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"/>
 
+           </FrameLayout>
 
 
+           <FrameLayout
+               android:id="@+id/explanation_card"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:visibility="gone">
 
+               <ImageView
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:alpha="0.7"
+                   android:background="@color/md_black_1000"/>
+
+               <TextView
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:gravity="center"
+                   android:textColor="@color/md_white_1000"
+                   android:padding="50dp"
+                   android:text="Long click a character to be able to remove from your team."/>
+
+               <android.support.design.widget.FloatingActionButton
+                   android:id="@+id/button_sample"
+                   android:layout_width="56dp"
+                   android:layout_height="56dp"
+                   android:src="@android:drawable/ic_input_add"
+                   android:tint="@color/colorPrimaryDark"
+                   android:layout_gravity="top|end"
+                   android:layout_marginTop="8dp"
+                   android:layout_marginEnd="8dp"/>
 
            </FrameLayout>
+
        </android.support.v7.widget.CardView>
    </FrameLayout>
 </layout>
