--- a/project/app/src/main/res/layout/nav_header_main.xml
+++ b/project/app/src/main/res/layout/nav_header_main.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 <FrameLayout
     android:layout_width="match_parent"
@@ -14,18 +12,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/splash_image"
         android:scaleType="centerCrop"
-        />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:paddingBottom="56dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        android:contentDescription="@string/content_description_navigation_header_image" />
 
     <TextView
         android:id="@+id/name"
