--- a/project/app/src/main/res/menu/main.xml
+++ b/project/app/src/main/res/menu/main.xml
@@ -6,5 +6,5 @@
         android:id="@+id/action_search"
         android:icon="@android:drawable/ic_menu_search"
         app:showAsAction="always"
-        android:title="Search"/>
+        android:title="@string/search"/>
 </menu>
